# sudsol

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  board.cpp  board.h  cell.h  main.cpp
source/algorithms/: algorithm.h  observe_algo.cpp  observe_algo.h
test/: CMakeLists.txt  main.cpp
test/golden_data/: board-0.txt  board-1.txt  board.txt
